--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,14 @@ services:
       env_file:
         - .env.gui
 
+    redis:
+      image: 'redis/redis-stack-server:latest'
+      ports:
+        - 6379:6379
+      environment:
+        - ALLOW_EMPTY_PASSWORD=yes
+
+
 volumes:
     shared-volume:
 
