--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,6 +39,9 @@ services:
 
     redis:
       image: 'redis/redis-stack-server:latest'
+      networks:
+        - internal
+        - shared
       ports:
         - 6379:6379
       environment:
