updated logic for recomendation rooms

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
           context: .
           dockerfile: Dockerfile.api
         volumes: *volumes
-        # runtime: nvidia
+        runtime: nvidia
         networks:
           - internal
           - shared
