--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,14 @@
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.1",
     "acorn": "^8.8.2",
+    "bootstrap": "^5.2.3",
     "chart.js": "3.4.1",
+    "chartist": "^1.3.0",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-chartist": "^0.14.4",
     "react-chartjs-2": "3.0.4",
     "react-countup": "6.3.0",
     "react-dom": "18.2.0",
